--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
           <div id="turn-message">Waiting for players...</div>
         </div>
 
+        <div id="wind-display">
+          <div class="wind-section">
+            <div class="wind-label">Current Wind</div>
+            <div id="current-wind" class="wind-value">← 0 →</div>
+          </div>
+          <div class="wind-section">
+            <div class="wind-label">Your Last Wind</div>
+            <div id="last-wind" class="wind-value">← 0 →</div>
+          </div>
+        </div>
+
         <div id="controls" style="display: none;">
           <div class="stats">
             <div>Power: <span id="power-value">50</span>%</div>
