--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dome Wars - Artillery Game</title>
+  <title>Project AP</title>
   <link rel="stylesheet" href="/src/styles/main.css">
 </head>
 <body>
