--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project AP</title>
   <link rel="stylesheet" href="/src/styles/main.css">
+  <link rel="stylesheet" href="/src/styles/store.css">
 </head>
 <body>
   <div id="game-container">
@@ -50,10 +51,11 @@
             <label for="angle-slider">Angle:</label>
             <input type="range" id="angle-slider" min="0" max="180" value="45">
           </div>
-          <div class="button-group">
-            <button id="move-button" class="secondary-btn">Move (M)</button>
-            <button id="fire-button" class="primary-btn">Fire! (Space)</button>
-          </div>
+        <div class="button-group">
+          <button id="store-button" class="secondary-btn">🏪 Store (S)</button>
+          <button id="move-button" class="secondary-btn">Move (M)</button>
+          <button id="fire-button" class="primary-btn">Fire! (Space)</button>
+        </div>
         </div>
       </div>
     </div>
